Basic mock set up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=LiarWire
+server.servlet.context-path=/mox
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=Mocks
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+
+# Optional: Connection URI (overrides host/port/database)
+spring.data.mongodb.uri=mongodb://localhost:27017/
