Added Caching to Mock configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.data.mongodb.password=
 
 # Optional: Connection URI (overrides host/port/database)
 spring.data.mongodb.uri=mongodb://localhost:27017/
+
+### Feature Properties ###
+
+###Mock Config Caching Max Size (Optional) ###
+#mock.config.cache.max.size=1000
+
+###Mock Config Caching Expiry In Seconds (Optional) ###
+#mock.config.cache.expiry.in.seconds=600
